# flashcardGenerator

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  FLOW.md  README.md  cli.py  docker-compose.yml  main.py  pyproject.toml
backend/: __init__.py  main.py
backend/api/v1/: cards.py  export.py  images.py  prompts.py  router.py  sessions.py
backend/db/: database.py  models.py  schemas.py
backend/services/: card_service.py  pdf_service.py  prompt_evolution_service.py  prompt_service.py  session_service.py
config/: config.py  prompts.py  settings.py
frontend/: Dockerfile  nginx.conf  package-lock.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/pages/: HomePage.tsx  PromptsPage.tsx  ReviewPage.tsx  UploadPage.tsx
frontend/src/types/: index.ts
modules/: anki_connect.py  anki_integration.py  card_generation.py  llm_interface.py  markdown_processor.py  pdf_image_extractor.py  pdf_processor.py
scripts/: sync_to_anki.sh
tests/: test_modules.py
utils/: pipeline.py
